Fixed br displays on mobile and Safari round input corners

--- a/src/css/_forms.scss
+++ b/src/css/_forms.scss
@@ -16,6 +16,7 @@
     padding: 1.5rem;
     background-color: #f8f8f8;
     font-size: 1.6rem;
+    border-radius: 0;
 
     &:focus {
         outline: none;
